    module.
60. slsh/lib/test/: Have `make check` run the test scripts in this
    directory.
61. modules/csv-module.c: Added line number information to error
    messages.
62. src/test/: Updated some tests
63. src/sltoken.c: bug fix affecting reading byte-compiled files: Use
    SLatoul for unsigned longs instead of atol; remove alignment test
    from pack.sl until a new test can be devised.
64. Added support for compiling against slsyscall testing library.
    It is disabled for production code.
65. Bug fixes:

      src/slarrfun.c: SLang_duplicate_array return value not checked;
      src/slstdio.c: SLfree was used in an error handler instead of
       SLang_free_slstring
      src/slposio.c: If EINTR happens in the close function, do not
       restart it.  See <http://lwn.net/Articles/576478/>.
      src/sltoken.c: Use unsigned char * cast for SLatol functions.

66. src/slmisc.c: \uABCD supported in string literals.  Previously,
    braces were required (\u{ABCD}).
67. Updated many of the unit tests/regression scripts.
68. Updated more tests.  Made use of the _slang.h LONG_IS_INT macro to
    eliminate some unused functions on systems where
    sizeof(long)==sizeof(int).
69. modules/slsmg-module.c: was not compiling on windows; fixed a
    malformed comment in src/test/sltest.c.

{{{ Previous Versions

Changes since 2.2.4
1. src/slarray.c: Try to find a suitable multiplier for range arrays
   to avoid roundoff errors.  Using the multiplier avoids the
   [1:10:0.001] from having the element 1.1260000000000001.
2. doc/tm/rtl/strops.tm: Correct typos in string_match documentation
   (Manfred Hanke).
3. modules/base64-module.c: Added a base64 encoder module.
4. modules/chksum-module.c: A module to compute md5, sha1, etc
   checksums.
5. Removed a few unused variables from the code.
6. Documentation updates and corrections by Agathoklis D. Hatzimanikas.
7. src/slarray.c: array_map enhanced to handle functions that return