@@ -24,6 +24,7 @@ USA.
 
 #define _BSD_SOURCE 1		       /* to get strtoll */
 #define _SVID_SOURCE		       /* for putenv */
+#define _DEFAULT_SOURCE 1
 #include "slinclud.h"
 /*{{{ Include Files */
 
