@@ -160,7 +160,7 @@ Changes since 2.3.0
 63. src/sltoken.c: bug fix affecting reading byte-compiled files: Use
     SLatoul for unsigned longs instead of atol; remove alignment test
     from pack.sl until a new test can be devised.
-64. Added support for compiling against slsyscall testing library.
+64. Added support for compiling against slsyswrap testing library.
     It is disabled for production code.
 65. Bug fixes:
 
@@ -179,6 +179,8 @@ Changes since 2.3.0
     sizeof(long)==sizeof(int).
 69. modules/slsmg-module.c: was not compiling on windows; fixed a
     malformed comment in src/test/sltest.c.
+70. Added "#define _DEFAULT_SOURCE" to a few places to quiet gcc;
+    Added slsyswrap support to src/slposdir.c,slposio.c,slcommon.c
 
 {{{ Previous Versions
 
